- adding manual macgard payment

--- a/locales/pos_messages.properties
+++ b/locales/pos_messages.properties
@@ -220,6 +220,7 @@ message.customerdiscount=Customer gets a discount. Do you want to apply this to 
 message.customerdiscountapplied=Warning!! Customer discounts have already been applied to this ticket and cannot be removed. You may want to start a new ticket.  
       
 
+Menu.RegistroDeVenta= Registro de Venta
 
 Printer.Null=Printer Not Available
 Printer.Screen=Screen Printer
